--- a/css/impress.css
+++ b/css/impress.css
@@ -82,8 +82,9 @@ a {
     text-decoration: none;
     padding: 0 0.1em;
     background: rgba(255,255,255,0.5);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
+    text-shadow: 1px 1px 2px rgba(100,100,100,0.5);
     border-radius: 0.2em;
+    cursor: pointer;
     
     -webkit-transition: 0.5s;
     -moz-transition:    0.5s;
@@ -92,9 +93,14 @@ a {
     transition:         0.5s;
 }
 
+.slide a, .slide a:hover {
+    background: none;
+    text-decoration: underline;
+}
+
 a:hover {
     background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
+    text-shadow: 1px 1px 2px rgba(100,100,100,0.5);
 }
 
 /* enable clicking on elements 'hiding' behind body in 3D */
@@ -249,4 +255,8 @@ body     { pointer-events: none; }
 
 .impress-not-supported .fallback-message {
     display: block;
+}
+
+a, iframe, #impress {
+    pointer-events: auto;
 }
